Fixed text alignment of thumbnails on mobile layouts

--- a/app/assets/stylesheets/layout/lists/horizontal.css
+++ b/app/assets/stylesheets/layout/lists/horizontal.css
@@ -15,9 +15,3 @@ ul.horizontal.center > li:not(.bio, .genre) {
   float: none;
   display: inline-block;
 }
-
-@media(max-width: 650px) {
-  ul.horizontal {
-    text-align: center;
-  }
-}
